--- a/DataSystem/src/main/java/ventanas/LoginForm.form
+++ b/DataSystem/src/main/java/ventanas/LoginForm.form
@@ -24,20 +24,38 @@
     <DimensionLayout dim="0">
       <Group type="103" groupAlignment="0" attributes="0">
           <Group type="102" alignment="0" attributes="0">
-              <EmptySpace min="-2" pref="51" max="-2" attributes="0"/>
-              <Component id="jLabel_WallPaper" pref="241" max="32767" attributes="0"/>
-              <EmptySpace min="-2" pref="108" max="-2" attributes="0"/>
+              <EmptySpace max="-2" attributes="0"/>
+              <Component id="lbl_nick" min="-2" pref="52" max="-2" attributes="0"/>
+              <EmptySpace max="32767" attributes="0"/>
+          </Group>
+          <Group type="102" alignment="0" attributes="0">
+              <Component id="txt_nick" min="-2" pref="170" max="-2" attributes="0"/>
+              <EmptySpace min="0" pref="230" max="32767" attributes="0"/>
           </Group>
       </Group>
     </DimensionLayout>
     <DimensionLayout dim="1">
       <Group type="103" groupAlignment="0" attributes="0">
-          <Component id="jLabel_WallPaper" alignment="0" pref="550" max="32767" attributes="0"/>
+          <Group type="102" alignment="0" attributes="0">
+              <EmptySpace max="-2" attributes="0"/>
+              <Component id="lbl_nick" min="-2" max="-2" attributes="0"/>
+              <EmptySpace max="-2" attributes="0"/>
+              <Component id="txt_nick" min="-2" max="-2" attributes="0"/>
+              <EmptySpace pref="496" max="32767" attributes="0"/>
+          </Group>
       </Group>
     </DimensionLayout>
   </Layout>
   <SubComponents>
-    <Component class="javax.swing.JLabel" name="jLabel_WallPaper">
+    <Component class="javax.swing.JLabel" name="lbl_nick">
+      <Properties>
+        <Property name="text" type="java.lang.String" value="Nick"/>
+      </Properties>
+    </Component>
+    <Component class="javax.swing.JTextField" name="txt_nick">
+      <Events>
+        <EventHandler event="keyTyped" listener="java.awt.event.KeyListener" parameters="java.awt.event.KeyEvent" handler="txt_nickKeyTyped"/>
+      </Events>
     </Component>
   </SubComponents>
 </Form>
